--- a/src/main.css
+++ b/src/main.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
 }
 body {
-    background-color: #EFEBE0;
+    background-color: #f5f2eb;
     font-family: 'Lato', sans-serif;
 }
 .nav-div {
@@ -17,7 +17,7 @@ body {
     right: 0;
     left: 0;
     z-index: 5;
-    background-color: #EFEBE0;
+    background-color: #f5f2eb;
     top: 0;
 }
 .front-page {
@@ -35,6 +35,15 @@ body {
     color: lightgrey;
     padding-left: 25px;
 }
+.list-item-logo {
+    display: inline;
+    list-style: none;
+    color: lightgrey;
+    padding-left: 25px;
+}
+.list-item-logo a {
+    text-decoration: none;
+}
 .hero {
     height: auto;
     padding-top: 7.5%;
@@ -45,5 +54,37 @@ body {
     width: 93%;
     margin-right: auto;
     margin-left: auto;
-    background-color: white;
+    background-image: url(./images/backdrop.jpg);
+    background-size: 100% 100%;
+    display: flex;
+    align-items: 'center';
+}
+.logo {
+    height: 500px;
+    margin: auto;
+}
+.gallery {
+    padding-top: 10%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: 'center';
+}
+.picture-row {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2.5%;
+}
+.outer-picture {
+    height: 400px;
+    width: 400px;
+}
+.inner-picture {
+
+    height: 400px;
+    width: 400px;
+    border-radius: 400px;
 }
