--- a/src/main.css
+++ b/src/main.css
@@ -1,6 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
+    scroll-behavior: smooth;
 }
 body {
     background-color: #f5f2eb;
@@ -14,11 +15,15 @@ body {
     padding-left: 3.5%;
     padding-right: 3.5%;
     max-width: auto;
+    height: 100px;
     right: 0;
     left: 0;
     z-index: 5;
     background-color: #f5f2eb;
     top: 0;
+}
+.nav-logo {
+    height: 80px;
 }
 .front-page {
     text-decoration: none;
@@ -44,10 +49,25 @@ body {
 .list-item-logo a {
     text-decoration: none;
 }
+.link {
+    align-self: center;
+    width: 150px;
+    text-decoration: none;
+    font-size: 20px;
+    background-color: #f5f2eb;
+    color: rgb(0, 0, 0);
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    font-weight: bold;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px 20px 10px;
+}
 .hero {
     height: auto;
     padding-top: 7.5%;
-
 }
 .hero-banner {
     height: 55vh;
@@ -57,18 +77,50 @@ body {
     background-image: url(./images/backdrop.jpg);
     background-size: 100% 100%;
     display: flex;
-    align-items: 'center';
+    flex-direction: column;
+    justify-content: center;
 }
 .logo {
-    height: 500px;
-    margin: auto;
+    height: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2.5%;
+    margin-top: 5%;
+    border-radius: 350px;
+}
+.gallery-link {
+    align-self: center;
+    width: 150px;
+    text-decoration: none;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+    border-style: solid;
+    border-color: black;
+    font-weight: bold;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    padding: 10px;
+    top: 0;
+}
+.gallery-link:hover {
+    background-color: #c5c5c4;
+    border-color: #c5c5c4;
+    transition: .3s;
 }
 .gallery {
-    padding-top: 10%;
+    padding-top: 2.5%;
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: 'center';
+    text-align: center;
+}
+h2 {
+    font-size: 50px;
+    padding-bottom: 2.5%;
 }
 .picture-row {
     width: 80%;
@@ -83,8 +135,71 @@ body {
     width: 400px;
 }
 .inner-picture {
-
     height: 400px;
     width: 400px;
     border-radius: 400px;
+}
+.comissions {
+    padding-top: 2.5%;
+    padding-bottom: 5%;
+    text-align: center;
+}
+.comission-information {
+    font-weight: bold;
+    font-size: 30px;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+}
+.comission-information li {
+    margin-bottom: 30px;
+
+}
+.contact {
+    padding-top: 2.5%;
+    padding-bottom: 20%;
+    text-align: center;
+}
+.contact-description {
+    width: 30%;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.contact-form {
+    max-width: 600px; 
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f2eb;
+    padding: 40px;
+    border-radius: 5px;
+    font-family: 'Lato', sans-serif;
+}
+.form {
+    background-color: #f5f2eb;
+    margin-bottom: 15px;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border-style: none;
+    border-bottom: 1px solid rgb(163, 163, 163);
+    padding-left: 3%;
+}
+input {
+    height: 40px;
+}
+.message {
+    height: 80px;
+}
+.submit {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    border-color: rgb(131, 131, 131);
+    border-radius: 2px;
+    width: 100px;
+    align-self: center;
+    text-align: center;
+    padding: 0;
 }
