--- a/src/main.css
+++ b/src/main.css
@@ -24,6 +24,7 @@ body {
 }
 .nav-logo {
     height: 80px;
+    border-radius: 80px;
 }
 .front-page {
     text-decoration: none;
@@ -37,22 +38,36 @@ body {
 .top-link:hover {
     color: rgb(0, 0, 0);
     transition: 0.25s;
+    filter: drop-shadow(0 0 .5px rgb(135, 210, 253));
 }
 .list-item {
     display: inline;
     font-weight: bold;
     font-size: 20px;
     color: lightgrey;
-    padding-left: 25px;
+    padding-right: 25px;
+    vertical-align: 20%;
 }
 .list-item-logo {
     display: inline;
     list-style: none;
     color: lightgrey;
-    padding-left: 25px;
+    padding-right: 10px;
 }
 .list-item-logo a {
     text-decoration: none;
+}
+.youtube {
+    vertical-align: 10%
+}
+.lift {
+    position: relative;
+    top: 0;
+    transition: top ease 0.15s;
+  }
+.lift:hover {
+    top: -3px;
+    filter: drop-shadow(0 0 1px rgb(135, 210, 253));
 }
 .link {
     align-self: center;
