--- a/src/main.css
+++ b/src/main.css
@@ -26,17 +26,19 @@ body {
     height: 80px;
     border-radius: 80px;
 }
+.list {
+    margin-left: auto
+}
 .front-page {
     text-decoration: none;
-    color: rgb(138, 138, 138);
 }
 .top-link {
-    color: rgb(128, 127, 127);
+    color: rgb(0, 0, 0);
     text-decoration: none;
     font-weight: bold;
 }
 .top-link:hover {
-    color: rgb(0, 0, 0);
+    color: rgb(128, 127, 127);
     transition: 0.25s;
     filter: drop-shadow(0 0 .5px rgb(135, 210, 253));
 }
@@ -94,6 +96,23 @@ body {
     height: 0;
     visibility: 0;
 }
+.button-box {
+    width: 0;
+    visibility: hidden;
+}
+.bar {
+    height: 4px;
+    width: 40px;
+    background-color: rgb(0, 0, 0);
+    margin-top: 3.5px;
+    margin-bottom: 3.5px;
+    border-radius: 10px;
+    pointer-events: none;
+}
+.drop-content {
+    visibility: hidden;
+    position: absolute;
+}
 .hero {
     height: auto;
     padding-top: 7.5%;
@@ -110,7 +129,7 @@ body {
     justify-content: center;
 }
 .logo {
-    height: 350px;
+    height:50%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2.5%;
@@ -166,13 +185,17 @@ h2 {
     visibility: visible;
 }
 .outer-picture {
-    height: 400px;
-    width: 400px;
+    width: 30%;
+    min-width: 200px;
+    height: 100%;    
+    aspect-ratio: 1/1;
 }
 .inner-picture {
-    height: 400px;
-    width: 400px;
-    border-radius: 400px;
+    width: 25%;
+    min-width: 200px;
+    height: 100%;    
+    aspect-ratio: 1/1;
+    border-radius: 300px;
 }
 .reveal {
     visibility: visible;
@@ -186,11 +209,13 @@ h2 {
     text-align: center;
 }
 .comission-information {
+    text-align: center;
     font-weight: bold;
     font-size: 30px;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
+    list-style: none;
 }
 .comission-information li {
     margin-bottom: 30px;
@@ -243,4 +268,96 @@ input {
     align-self: center;
     text-align: center;
     padding: 10px 20px 10px;
+}
+@media (max-width: 768px) {
+    .list-item, .list-item-logo {
+        display: none;
+    }
+    .button-box {
+        visibility: visible;
+        height: auto;
+        width: auto;
+        background-color: #f5f2eb;
+        z-index: 6;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        vertical-align: middle;
+    }
+    .drop-content {
+        visibility: hidden;
+        position: absolute;
+        top: 0px;
+        right: 0;
+        transform: translateX(75vw);
+        transition: 0.3s;
+        height: 100vh;
+        width: 80vw;
+        z-index: 5;
+        text-align: center;
+        opacity: 100%;
+        background-color: #f5f2eb;
+        padding-top: 99px;
+    }
+    .nav-hidden {
+        font-size: 30px;
+        font-weight: bold;
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+        display: block;
+        padding: 15px;
+        opacity: 100%;
+      }
+      .nav-hidden:hover {
+        background-color: #ffffff;
+    }
+    .show {
+        position: absolute;
+        visibility: visible;
+        top: 0px;
+        right: 0;
+        transform: translateX(-.3vw);
+        transition: 0.3s;
+        height: 100vh;
+        width: 80vw;
+        z-index: 5;
+        text-align: center;
+        opacity: 100%;
+        background-color: #f5f2eb;
+        box-shadow: -8px 0px 10px 1px;
+        padding-top: 99px;
+    }
+    .button-box {
+        visibility: visible;
+        height: auto;
+        width: auto;
+        background-color: #f5f2eb;
+        z-index: 6;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        vertical-align: middle;
+    }
+    .picture-row {
+        flex-direction: column;
+        align-items: center;
+    }
+    .outer-picture {
+        width: 80%;
+        min-width: 200px;
+        height: 100%;    
+        aspect-ratio: 1/1;
+        padding-bottom: 15px;
+    }
+    .inner-picture {
+        width: 80%;
+        min-width: 200px;
+        height: 100%;    
+        aspect-ratio: 1/1;
+        border-radius: 0 ;
+        padding-bottom: 15px;
+    }
+    .comission-information {
+        width: 80%;
+        list-style: none;
 }
