--- a/src/main.css
+++ b/src/main.css
@@ -198,6 +198,14 @@ h2 {
     aspect-ratio: 1/1;
     border-radius: 300px;
 }
+.pic {
+    transition: .2s linear;
+    object-fit: cover;
+}
+.pic:hover {
+    transform: scale(1.03);
+    cursor: pointer;
+}
 .reveal {
     visibility: visible;
     height: 400px;
@@ -228,10 +236,9 @@ h2 {
 }
 .popup-image img {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 750px;
-    object-fit: cover;
+    top: 2%;
+    right: 30%;
+    width: 40%;
 }
 .commissions {
     padding-top: 2.5%;
