--- a/src/main.css
+++ b/src/main.css
@@ -160,16 +160,19 @@ body {
     transition: .3s;
 }
 .gallery {
-    padding-top: 2.5%;
+    padding-top: 3%;
     height: auto;
     display: flex;
     flex-direction: column;
     align-items: 'center';
     text-align: center;
 }
+.gallery-header {
+    margin-bottom: 50px;
+}
 h2 {
     font-size: 50px;
-    padding-bottom: 2.5%;
+    margin-bottom: 30px;
 }
 .hidden-pic {
     visibility: hidden;
@@ -246,7 +249,7 @@ h2 {
     text-align: center;
 }
 .commission-information {
-    text-align: center;
+    text-align: left;
     font-weight: bold;
     font-size: 30px;
     width: 50%;
@@ -303,7 +306,8 @@ input {
     height: 40px;
 }
 .message {
-    height: 80px;
+    height: 200px;
+    resize: none;
 }
 .submit {
     background-color: rgb(0, 0, 0);
