--- a/src/main.css
+++ b/src/main.css
@@ -376,6 +376,16 @@ figcaption {
     height: auto;
     width: 303.3px;
 }
+.email-copy {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    border-style: none;
+    padding: 2px 8px 4px;
+    margin-left: 10px;
+}
 .contact-picture {
     height: 250px;
 }
@@ -388,6 +398,12 @@ figcaption {
     border-style: none;
     border-bottom: 1px solid rgb(163, 163, 163);
     padding-left: 3%;
+}
+.email-copy:hover {
+    background-color: #c5c5c4;
+    border-color: #c5c5c4;
+    transition: .3s;
+    cursor: pointer;
 }
 input {
     height: 40px;
@@ -406,6 +422,11 @@ input {
     text-align: center;
     text-decoration: none;
     padding: 10px 20px 10px;
+}
+.submit:hover {
+    background-color: #c5c5c4;
+    border-color: #c5c5c4;
+    transition: .3s;
 }
 @media (max-width: 1400px) {
     .commission-information {
