--- a/src/main.css
+++ b/src/main.css
@@ -297,6 +297,7 @@ h3 {
     margin-right: auto;
     list-style: none;
     line-height: 1.6;
+    padding-left: 0;
 }
 .commission-information li {
     margin-bottom: 30px;
@@ -305,6 +306,21 @@ h3 {
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
+}
+.selection {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+}
+h6 {
+    margin: 0;
+    margin-bottom: 20px;
+
+}
+select {
+    height: 30px;
+    margin-left: 10px;
 }
 h4 {
     margin-top: 0;
